--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,73 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.size{
+  font-size:1em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.boxborder{
+  border-right: black 2px;
+}
+.formbtn{
+  width: 60px;
+  height: 25px;
+  font-size: 10px;
+  margin: 3px;
+  font-weight: bold;
+  border: 1px solid red;
+}
+@media print{
+    #hashTag{
+        display: none;
+    }
+}
+@media (max-width: 575px) { 
+  .adjust_font{
+    font-size: small;
+  }
+  .adjustin_item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ }
+@media (min-width: 576px) and (max-width: 767.98px) { 
+   .adjust_font{
+   font-size: medium;
+  } 
+  .adjustin_item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 768px) and (max-width: 991.98px) { 
+   .adjust_font{
+ font-size: medium;
   }
-  to {
-    transform: rotate(360deg);
+  .adjustin_item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
+
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+   .adjust_font{
+    font-size: medium;
+  }
+  .adjustin_item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ }
+
+
+@media (min-width: 1200px) { 
+  .adjust_font{
+   font-size: x-large;
+  }
+  
+ }
